--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,4 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
+
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
@@ -16,3 +10,72 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 24px;
+  padding-top: 24px;
+  margin: 0 auto;
+  max-width: 1128px;     
+}
+
+.gallery-item{
+  width: 360px;
+}
+
+/* FORM */
+.form {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0;
+}
+
+.feedback-form {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column; 
+  gap: 16px;
+}
+
+
+input, textarea {
+  width: 100%; 
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px;
+  resize: none;
+}
+
+.feedback-form label {
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start; 
+  gap: 8px; 
+  width: 100%; 
+  font-weight: 400;
+  font-size: 16px;
+  color: #2e2f42;
+}
+
+button{
+  display: flex;
+  width: 95px;
+  height: 40px;
+  align-items: flex-start; 
+  background-color: #4e75ff;
+  border: none;
+  border-radius: 8px;
+  justify-content: center; 
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+}
+
+button:hover{
+  background-color:#6c8cff;
+}
